add dummy variables for analysis

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rj/8b1y14lj1rb1yqx9tb_cdshh0000gn/T/ipykernel_79553/2427516042.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/rj/8b1y14lj1rb1yqx9tb_cdshh0000gn/T/ipykernel_81600/2427516042.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies_data = pd.read_csv(\"data/movies_metadata.csv\")\n"
      ]
     }
@@ -421,7 +421,8 @@
    "source": [
     "# Drop irrelevant columns\n",
     "movies_data.drop(columns=['adult', 'homepage', 'imdb_id', 'status', 'tagline',\n",
-    "                          'overview', 'poster_path', 'video'], inplace=True)"
+    "                          'overview', 'poster_path', 'video', 'spoken_languages',\n",
+    "                          'production_companies', 'production_countries'], inplace=True)"
    ]
   },
   {
@@ -527,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(44686, 16)\n"
+      "(44686, 13)\n"
      ]
     }
    ],
@@ -540,6 +541,70 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    True\n",
+      "1    True\n",
+      "2    True\n",
+      "3    True\n",
+      "4    True\n",
+      "Name: original_english, dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create dummy variable for whether or not the original language is English\n",
+    "movies_data['original_language'] = movies_data['original_language'] == 'en'\n",
+    "movies_data = movies_data.rename(columns={'original_language': 'original_english'})\n",
+    "print(movies_data['original_english'].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    10\n",
+      "1    12\n",
+      "2    12\n",
+      "3    12\n",
+      "4     2\n",
+      "Name: month, dtype: int64\n",
+      "0    False\n",
+      "1     True\n",
+      "2     True\n",
+      "3     True\n",
+      "4     True\n",
+      "Name: holiday, dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create dummy variable for whether or not the movie was released in the holiday season\n",
+    "\n",
+    "# Extract month from release_date variable\n",
+    "movies_data['month'] = movies_data['release_date'].dt.month\n",
+    "movies_data['month'] = movies_data['month'].astype(int)\n",
+    "print(movies_data['month'].head())\n",
+    "\n",
+    "# Holiday months are December-February and June-August, the rest are non-holiday\n",
+    "movies_data['holiday'] = (\n",
+    "    ((movies_data['month'] >= 6) & (movies_data['month'] <= 8)) | \n",
+    "    ((movies_data['month'] == 12) | (movies_data['month'] <= 2)))\n",
+    "print(movies_data['holiday'].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -571,33 +636,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1293</td>\n",
-       "      <td>3.978261</td>\n",
+       "      <td>1953</td>\n",
+       "      <td>4.021739</td>\n",
        "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1371</td>\n",
-       "      <td>3.053191</td>\n",
-       "      <td>47</td>\n",
+       "      <td>2968</td>\n",
+       "      <td>3.569767</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1405</td>\n",
-       "      <td>3.032609</td>\n",
-       "      <td>46</td>\n",
+       "      <td>144</td>\n",
+       "      <td>3.326923</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>17</td>\n",
-       "      <td>3.924419</td>\n",
-       "      <td>86</td>\n",
+       "      <td>153</td>\n",
+       "      <td>2.782946</td>\n",
+       "      <td>129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>62</td>\n",
-       "      <td>3.689655</td>\n",
-       "      <td>87</td>\n",
+       "      <td>222</td>\n",
+       "      <td>3.931818</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -605,14 +670,14 @@
       ],
       "text/plain": [
        "   movieId  rating_average  rating_count\n",
-       "0     1293        3.978261            46\n",
-       "1     1371        3.053191            47\n",
-       "2     1405        3.032609            46\n",
-       "3       17        3.924419            86\n",
-       "4       62        3.689655            87"
+       "0     1953        4.021739            46\n",
+       "1     2968        3.569767            43\n",
+       "2      144        3.326923            26\n",
+       "3      153        2.782946           129\n",
+       "4      222        3.931818            22"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,14 +698,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2814, 19)\n"
+      "(2814, 18)\n"
      ]
     },
     {
@@ -668,18 +733,17 @@
        "      <th>budget</th>\n",
        "      <th>genres</th>\n",
        "      <th>id</th>\n",
-       "      <th>original_language</th>\n",
+       "      <th>original_english</th>\n",
        "      <th>original_title</th>\n",
        "      <th>popularity</th>\n",
-       "      <th>production_companies</th>\n",
-       "      <th>production_countries</th>\n",
        "      <th>release_date</th>\n",
        "      <th>revenue</th>\n",
        "      <th>runtime</th>\n",
-       "      <th>spoken_languages</th>\n",
        "      <th>title</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
+       "      <th>month</th>\n",
+       "      <th>holiday</th>\n",
        "      <th>rating_average</th>\n",
        "      <th>rating_count</th>\n",
        "    </tr>\n",
@@ -691,18 +755,17 @@
        "      <td>58000000</td>\n",
        "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 28, '...</td>\n",
        "      <td>710</td>\n",
-       "      <td>en</td>\n",
+       "      <td>True</td>\n",
        "      <td>GoldenEye</td>\n",
        "      <td>14.686036</td>\n",
-       "      <td>[{'name': 'United Artists', 'id': 60}, {'name'...</td>\n",
-       "      <td>[{'iso_3166_1': 'GB', 'name': 'United Kingdom'...</td>\n",
        "      <td>1995-11-16</td>\n",
        "      <td>352194034.0</td>\n",
        "      <td>130.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
        "      <td>GoldenEye</td>\n",
        "      <td>6.6</td>\n",
        "      <td>1194.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.500000</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -712,18 +775,17 @@
        "      <td>98000000</td>\n",
        "      <td>[{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...</td>\n",
        "      <td>1408</td>\n",
-       "      <td>en</td>\n",
+       "      <td>True</td>\n",
        "      <td>Cutthroat Island</td>\n",
        "      <td>7.284477</td>\n",
-       "      <td>[{'name': 'Le Studio Canal+', 'id': 183}, {'na...</td>\n",
-       "      <td>[{'iso_3166_1': 'FR', 'name': 'France'}, {'iso...</td>\n",
        "      <td>1995-12-22</td>\n",
        "      <td>10017322.0</td>\n",
        "      <td>119.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
        "      <td>Cutthroat Island</td>\n",
        "      <td>5.7</td>\n",
        "      <td>137.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
        "      <td>3.616279</td>\n",
        "      <td>43</td>\n",
        "    </tr>\n",
@@ -733,18 +795,17 @@
        "      <td>52000000</td>\n",
        "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 80, 'name...</td>\n",
        "      <td>524</td>\n",
-       "      <td>en</td>\n",
+       "      <td>True</td>\n",
        "      <td>Casino</td>\n",
        "      <td>10.137389</td>\n",
-       "      <td>[{'name': 'Universal Pictures', 'id': 33}, {'n...</td>\n",
-       "      <td>[{'iso_3166_1': 'FR', 'name': 'France'}, {'iso...</td>\n",
        "      <td>1995-11-22</td>\n",
        "      <td>116112375.0</td>\n",
        "      <td>178.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
        "      <td>Casino</td>\n",
        "      <td>7.8</td>\n",
        "      <td>1343.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>False</td>\n",
        "      <td>3.555556</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
@@ -754,18 +815,17 @@
        "      <td>16500000</td>\n",
        "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...</td>\n",
        "      <td>4584</td>\n",
-       "      <td>en</td>\n",
+       "      <td>True</td>\n",
        "      <td>Sense and Sensibility</td>\n",
        "      <td>10.673167</td>\n",
-       "      <td>[{'name': 'Columbia Pictures Corporation', 'id...</td>\n",
-       "      <td>[{'iso_3166_1': 'GB', 'name': 'United Kingdom'...</td>\n",
        "      <td>1995-12-13</td>\n",
        "      <td>135000000.0</td>\n",
        "      <td>136.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
        "      <td>Sense and Sensibility</td>\n",
        "      <td>7.2</td>\n",
        "      <td>364.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -775,18 +835,17 @@
        "      <td>4000000</td>\n",
        "      <td>[{'id': 80, 'name': 'Crime'}, {'id': 35, 'name...</td>\n",
        "      <td>5</td>\n",
-       "      <td>en</td>\n",
+       "      <td>True</td>\n",
        "      <td>Four Rooms</td>\n",
        "      <td>9.026586</td>\n",
-       "      <td>[{'name': 'Miramax Films', 'id': 14}, {'name':...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
        "      <td>1995-12-09</td>\n",
        "      <td>4300000.0</td>\n",
        "      <td>98.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
        "      <td>Four Rooms</td>\n",
        "      <td>6.5</td>\n",
        "      <td>539.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
        "      <td>3.267857</td>\n",
        "      <td>56</td>\n",
        "    </tr>\n",
@@ -802,57 +861,36 @@
        "3                  False  16500000   \n",
        "4                  False   4000000   \n",
        "\n",
-       "                                              genres    id original_language  \\\n",
-       "0  [{'id': 12, 'name': 'Adventure'}, {'id': 28, '...   710                en   \n",
-       "1  [{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...  1408                en   \n",
-       "2  [{'id': 18, 'name': 'Drama'}, {'id': 80, 'name...   524                en   \n",
-       "3  [{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...  4584                en   \n",
-       "4  [{'id': 80, 'name': 'Crime'}, {'id': 35, 'name...     5                en   \n",
+       "                                              genres    id  original_english  \\\n",
+       "0  [{'id': 12, 'name': 'Adventure'}, {'id': 28, '...   710              True   \n",
+       "1  [{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...  1408              True   \n",
+       "2  [{'id': 18, 'name': 'Drama'}, {'id': 80, 'name...   524              True   \n",
+       "3  [{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...  4584              True   \n",
+       "4  [{'id': 80, 'name': 'Crime'}, {'id': 35, 'name...     5              True   \n",
        "\n",
-       "          original_title  popularity  \\\n",
-       "0              GoldenEye   14.686036   \n",
-       "1       Cutthroat Island    7.284477   \n",
-       "2                 Casino   10.137389   \n",
-       "3  Sense and Sensibility   10.673167   \n",
-       "4             Four Rooms    9.026586   \n",
+       "          original_title  popularity release_date      revenue  runtime  \\\n",
+       "0              GoldenEye   14.686036   1995-11-16  352194034.0    130.0   \n",
+       "1       Cutthroat Island    7.284477   1995-12-22   10017322.0    119.0   \n",
+       "2                 Casino   10.137389   1995-11-22  116112375.0    178.0   \n",
+       "3  Sense and Sensibility   10.673167   1995-12-13  135000000.0    136.0   \n",
+       "4             Four Rooms    9.026586   1995-12-09    4300000.0     98.0   \n",
        "\n",
-       "                                production_companies  \\\n",
-       "0  [{'name': 'United Artists', 'id': 60}, {'name'...   \n",
-       "1  [{'name': 'Le Studio Canal+', 'id': 183}, {'na...   \n",
-       "2  [{'name': 'Universal Pictures', 'id': 33}, {'n...   \n",
-       "3  [{'name': 'Columbia Pictures Corporation', 'id...   \n",
-       "4  [{'name': 'Miramax Films', 'id': 14}, {'name':...   \n",
+       "                   title  vote_average  vote_count  month  holiday  \\\n",
+       "0              GoldenEye           6.6      1194.0     11    False   \n",
+       "1       Cutthroat Island           5.7       137.0     12     True   \n",
+       "2                 Casino           7.8      1343.0     11    False   \n",
+       "3  Sense and Sensibility           7.2       364.0     12     True   \n",
+       "4             Four Rooms           6.5       539.0     12     True   \n",
        "\n",
-       "                                production_countries release_date  \\\n",
-       "0  [{'iso_3166_1': 'GB', 'name': 'United Kingdom'...   1995-11-16   \n",
-       "1  [{'iso_3166_1': 'FR', 'name': 'France'}, {'iso...   1995-12-22   \n",
-       "2  [{'iso_3166_1': 'FR', 'name': 'France'}, {'iso...   1995-11-22   \n",
-       "3  [{'iso_3166_1': 'GB', 'name': 'United Kingdom'...   1995-12-13   \n",
-       "4  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-09   \n",
-       "\n",
-       "       revenue  runtime                                   spoken_languages  \\\n",
-       "0  352194034.0    130.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...   \n",
-       "1   10017322.0    119.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...   \n",
-       "2  116112375.0    178.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
-       "3  135000000.0    136.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
-       "4    4300000.0     98.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
-       "\n",
-       "                   title  vote_average  vote_count  rating_average  \\\n",
-       "0              GoldenEye           6.6      1194.0        1.500000   \n",
-       "1       Cutthroat Island           5.7       137.0        3.616279   \n",
-       "2                 Casino           7.8      1343.0        3.555556   \n",
-       "3  Sense and Sensibility           7.2       364.0        5.000000   \n",
-       "4             Four Rooms           6.5       539.0        3.267857   \n",
-       "\n",
-       "   rating_count  \n",
-       "0             2  \n",
-       "1            43  \n",
-       "2            36  \n",
-       "3             1  \n",
-       "4            56  "
+       "   rating_average  rating_count  \n",
+       "0        1.500000             2  \n",
+       "1        3.616279            43  \n",
+       "2        3.555556            36  \n",
+       "3        5.000000             1  \n",
+       "4        3.267857            56  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,11 +903,20 @@
     "data.drop(columns=['movieId'], inplace=True)\n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
