--- a/Report.ipynb
+++ b/Report.ipynb
@@ -94,6 +94,235 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import duckdb\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2814, 17)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>id</th>\n",
+       "      <th>original_english</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>month</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>rating_average</th>\n",
+       "      <th>rating_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>58000000</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 28, '...</td>\n",
+       "      <td>710</td>\n",
+       "      <td>True</td>\n",
+       "      <td>GoldenEye</td>\n",
+       "      <td>14.686036</td>\n",
+       "      <td>1995-11-16</td>\n",
+       "      <td>352194034.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>GoldenEye</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>1194.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>98000000</td>\n",
+       "      <td>[{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Cutthroat Island</td>\n",
+       "      <td>7.284477</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>10017322.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>Cutthroat Island</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.616279</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>52000000</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 80, 'name...</td>\n",
+       "      <td>524</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Casino</td>\n",
+       "      <td>10.137389</td>\n",
+       "      <td>1995-11-22</td>\n",
+       "      <td>116112375.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>Casino</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>1343.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.555556</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>16500000</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...</td>\n",
+       "      <td>4584</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Sense and Sensibility</td>\n",
+       "      <td>10.673167</td>\n",
+       "      <td>1995-12-13</td>\n",
+       "      <td>135000000.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>Sense and Sensibility</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>364.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>[{'id': 80, 'name': 'Crime'}, {'id': 35, 'name...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Four Rooms</td>\n",
+       "      <td>9.026586</td>\n",
+       "      <td>1995-12-09</td>\n",
+       "      <td>4300000.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Four Rooms</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>539.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.267857</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   belongs_to_collection    budget  \\\n",
+       "0                   True  58000000   \n",
+       "1                  False  98000000   \n",
+       "2                  False  52000000   \n",
+       "3                  False  16500000   \n",
+       "4                  False   4000000   \n",
+       "\n",
+       "                                              genres    id  original_english  \\\n",
+       "0  [{'id': 12, 'name': 'Adventure'}, {'id': 28, '...   710              True   \n",
+       "1  [{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...  1408              True   \n",
+       "2  [{'id': 18, 'name': 'Drama'}, {'id': 80, 'name...   524              True   \n",
+       "3  [{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...  4584              True   \n",
+       "4  [{'id': 80, 'name': 'Crime'}, {'id': 35, 'name...     5              True   \n",
+       "\n",
+       "          original_title  popularity release_date      revenue  runtime  \\\n",
+       "0              GoldenEye   14.686036   1995-11-16  352194034.0    130.0   \n",
+       "1       Cutthroat Island    7.284477   1995-12-22   10017322.0    119.0   \n",
+       "2                 Casino   10.137389   1995-11-22  116112375.0    178.0   \n",
+       "3  Sense and Sensibility   10.673167   1995-12-13  135000000.0    136.0   \n",
+       "4             Four Rooms    9.026586   1995-12-09    4300000.0     98.0   \n",
+       "\n",
+       "                   title  vote_average  vote_count  month  holiday  \\\n",
+       "0              GoldenEye           6.6      1194.0     11    False   \n",
+       "1       Cutthroat Island           5.7       137.0     12     True   \n",
+       "2                 Casino           7.8      1343.0     11    False   \n",
+       "3  Sense and Sensibility           7.2       364.0     12     True   \n",
+       "4             Four Rooms           6.5       539.0     12     True   \n",
+       "\n",
+       "   rating_average  rating_count  \n",
+       "0        1.500000             2  \n",
+       "1        3.616279            43  \n",
+       "2        3.555556            36  \n",
+       "3        5.000000             1  \n",
+       "4        3.267857            56  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"data/data.csv\")\n",
+    "print(data.shape)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Preregistration Statement"
    ]
   },
@@ -115,11 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -159,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
