--- a/Phase 2.ipynb
+++ b/Phase 2.ipynb
@@ -59,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rj/8b1y14lj1rb1yqx9tb_cdshh0000gn/T/ipykernel_14368/2427516042.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/rj/8b1y14lj1rb1yqx9tb_cdshh0000gn/T/ipykernel_81655/2427516042.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies_data = pd.read_csv(\"data/movies_metadata.csv\")\n"
      ]
     }
@@ -594,33 +594,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1343</td>\n",
-       "      <td>3.743590</td>\n",
-       "      <td>39</td>\n",
+       "      <td>1061</td>\n",
+       "      <td>3.545455</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3671</td>\n",
-       "      <td>3.935484</td>\n",
-       "      <td>62</td>\n",
+       "      <td>2105</td>\n",
+       "      <td>3.478723</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>50</td>\n",
-       "      <td>4.370647</td>\n",
-       "      <td>201</td>\n",
+       "      <td>2294</td>\n",
+       "      <td>3.273585</td>\n",
+       "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>150</td>\n",
-       "      <td>3.902500</td>\n",
-       "      <td>200</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.450820</td>\n",
+       "      <td>122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>266</td>\n",
-       "      <td>3.486301</td>\n",
-       "      <td>73</td>\n",
+       "      <td>39</td>\n",
+       "      <td>3.550000</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -628,11 +628,11 @@
       ],
       "text/plain": [
        "   movieId  rating_average  rating_count\n",
-       "0     1343        3.743590            39\n",
-       "1     3671        3.935484            62\n",
-       "2       50        4.370647           201\n",
-       "3      150        3.902500           200\n",
-       "4      266        3.486301            73"
+       "0     1061        3.545455            33\n",
+       "1     2105        3.478723            47\n",
+       "2     2294        3.273585            53\n",
+       "3       10        3.450820           122\n",
+       "4       39        3.550000           120"
       ]
      },
      "execution_count": 12,
@@ -1375,7 +1375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
