--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rj/8b1y14lj1rb1yqx9tb_cdshh0000gn/T/ipykernel_3653/2427516042.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/rj/8b1y14lj1rb1yqx9tb_cdshh0000gn/T/ipykernel_79788/2427516042.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies_data = pd.read_csv(\"data/movies_metadata.csv\")\n"
      ]
     }
@@ -543,6 +543,16 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter out negative and 0 values for revenue and budget, as these may be incorrect data\n",
+    "movies_data = movies_data[(movies_data['revenue'] > 0) & (movies_data['budget'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -550,9 +560,9 @@
      "text": [
       "0    1\n",
       "1    1\n",
-      "2    1\n",
       "3    1\n",
-      "4    1\n",
+      "5    1\n",
+      "8    1\n",
       "Name: original_english, dtype: int64\n"
      ]
     }
@@ -567,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,15 +586,15 @@
      "text": [
       "0    10\n",
       "1    12\n",
-      "2    12\n",
       "3    12\n",
-      "4     2\n",
+      "5    12\n",
+      "8    12\n",
       "Name: month, dtype: int64\n",
       "0    0\n",
       "1    1\n",
-      "2    1\n",
       "3    1\n",
-      "4    1\n",
+      "5    1\n",
+      "8    1\n",
       "Name: holiday, dtype: int64\n"
      ]
     }
@@ -607,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -639,33 +649,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1343</td>\n",
-       "      <td>3.743590</td>\n",
-       "      <td>39</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3.178571</td>\n",
+       "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3671</td>\n",
-       "      <td>3.935484</td>\n",
-       "      <td>62</td>\n",
+       "      <td>1263</td>\n",
+       "      <td>3.864583</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>50</td>\n",
-       "      <td>4.370647</td>\n",
-       "      <td>201</td>\n",
+       "      <td>2455</td>\n",
+       "      <td>3.393617</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>150</td>\n",
-       "      <td>3.902500</td>\n",
-       "      <td>200</td>\n",
+       "      <td>52</td>\n",
+       "      <td>3.637255</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>266</td>\n",
-       "      <td>3.486301</td>\n",
-       "      <td>73</td>\n",
+       "      <td>110</td>\n",
+       "      <td>3.945175</td>\n",
+       "      <td>228</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -673,14 +683,14 @@
       ],
       "text/plain": [
        "   movieId  rating_average  rating_count\n",
-       "0     1343        3.743590            39\n",
-       "1     3671        3.935484            62\n",
-       "2       50        4.370647           201\n",
-       "3      150        3.902500           200\n",
-       "4      266        3.486301            73"
+       "0       31        3.178571            42\n",
+       "1     1263        3.864583            48\n",
+       "2     2455        3.393617            47\n",
+       "3       52        3.637255            51\n",
+       "4      110        3.945175           228"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,14 +711,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2814, 18)\n"
+      "(1030, 18)\n"
      ]
     },
     {
@@ -754,103 +764,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>58000000</td>\n",
-       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 28, '...</td>\n",
-       "      <td>710</td>\n",
-       "      <td>1</td>\n",
-       "      <td>GoldenEye</td>\n",
-       "      <td>14.686036</td>\n",
-       "      <td>1995-11-16</td>\n",
-       "      <td>352194034.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>GoldenEye</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>1194.0</td>\n",
-       "      <td>11</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>2</td>\n",
+       "      <td>40000000</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 10749, '...</td>\n",
+       "      <td>508</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Love Actually</td>\n",
+       "      <td>10.586815</td>\n",
+       "      <td>2003-09-07</td>\n",
+       "      <td>244931766.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>Love Actually</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1917.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.668605</td>\n",
+       "      <td>86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>98000000</td>\n",
-       "      <td>[{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...</td>\n",
-       "      <td>1408</td>\n",
+       "      <td>42000000</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>509</td>\n",
        "      <td>1</td>\n",
-       "      <td>Cutthroat Island</td>\n",
-       "      <td>7.284477</td>\n",
-       "      <td>1995-12-22</td>\n",
-       "      <td>10017322.0</td>\n",
-       "      <td>119.0</td>\n",
-       "      <td>Cutthroat Island</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.616279</td>\n",
-       "      <td>43</td>\n",
+       "      <td>Notting Hill</td>\n",
+       "      <td>9.874043</td>\n",
+       "      <td>1999-05-13</td>\n",
+       "      <td>363889678.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>Notting Hill</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1309.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>52000000</td>\n",
-       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 80, 'name...</td>\n",
-       "      <td>524</td>\n",
        "      <td>1</td>\n",
-       "      <td>Casino</td>\n",
-       "      <td>10.137389</td>\n",
-       "      <td>1995-11-22</td>\n",
-       "      <td>116112375.0</td>\n",
-       "      <td>178.0</td>\n",
-       "      <td>Casino</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>1343.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.555556</td>\n",
-       "      <td>36</td>\n",
+       "      <td>65000000</td>\n",
+       "      <td>[{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...</td>\n",
+       "      <td>1271</td>\n",
+       "      <td>1</td>\n",
+       "      <td>300</td>\n",
+       "      <td>18.108408</td>\n",
+       "      <td>2006-12-09</td>\n",
+       "      <td>422610419.0</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>300</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5092.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.700000</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>16500000</td>\n",
-       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...</td>\n",
-       "      <td>4584</td>\n",
+       "      <td>24000000</td>\n",
+       "      <td>[{'id': 28, 'name': 'Action'}, {'id': 53, 'nam...</td>\n",
+       "      <td>1089</td>\n",
        "      <td>1</td>\n",
-       "      <td>Sense and Sensibility</td>\n",
-       "      <td>10.673167</td>\n",
-       "      <td>1995-12-13</td>\n",
-       "      <td>135000000.0</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>Sense and Sensibility</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>364.0</td>\n",
-       "      <td>12</td>\n",
+       "      <td>Point Break</td>\n",
+       "      <td>11.453093</td>\n",
+       "      <td>1991-07-12</td>\n",
+       "      <td>83531958.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>Point Break</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>861.0</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4.162879</td>\n",
+       "      <td>132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4000000</td>\n",
-       "      <td>[{'id': 80, 'name': 'Crime'}, {'id': 35, 'name...</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>Four Rooms</td>\n",
-       "      <td>9.026586</td>\n",
-       "      <td>1995-12-09</td>\n",
-       "      <td>4300000.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>Four Rooms</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>539.0</td>\n",
-       "      <td>12</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 10749, '...</td>\n",
+       "      <td>2770</td>\n",
        "      <td>1</td>\n",
-       "      <td>3.267857</td>\n",
-       "      <td>56</td>\n",
+       "      <td>American Pie 2</td>\n",
+       "      <td>10.251030</td>\n",
+       "      <td>2001-08-10</td>\n",
+       "      <td>287553595.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>American Pie 2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1375.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.068627</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -858,42 +868,42 @@
       ],
       "text/plain": [
        "   belongs_to_collection    budget  \\\n",
-       "0                      1  58000000   \n",
-       "1                      0  98000000   \n",
-       "2                      0  52000000   \n",
-       "3                      0  16500000   \n",
-       "4                      0   4000000   \n",
+       "0                      0  40000000   \n",
+       "1                      0  42000000   \n",
+       "2                      1  65000000   \n",
+       "3                      0  24000000   \n",
+       "4                      1  30000000   \n",
        "\n",
        "                                              genres    id  original_english  \\\n",
-       "0  [{'id': 12, 'name': 'Adventure'}, {'id': 28, '...   710                 1   \n",
-       "1  [{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...  1408                 1   \n",
-       "2  [{'id': 18, 'name': 'Drama'}, {'id': 80, 'name...   524                 1   \n",
-       "3  [{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...  4584                 1   \n",
-       "4  [{'id': 80, 'name': 'Crime'}, {'id': 35, 'name...     5                 1   \n",
+       "0  [{'id': 35, 'name': 'Comedy'}, {'id': 10749, '...   508                 1   \n",
+       "1  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...   509                 1   \n",
+       "2  [{'id': 28, 'name': 'Action'}, {'id': 12, 'nam...  1271                 1   \n",
+       "3  [{'id': 28, 'name': 'Action'}, {'id': 53, 'nam...  1089                 1   \n",
+       "4  [{'id': 35, 'name': 'Comedy'}, {'id': 10749, '...  2770                 1   \n",
        "\n",
-       "          original_title  popularity release_date      revenue  runtime  \\\n",
-       "0              GoldenEye   14.686036   1995-11-16  352194034.0    130.0   \n",
-       "1       Cutthroat Island    7.284477   1995-12-22   10017322.0    119.0   \n",
-       "2                 Casino   10.137389   1995-11-22  116112375.0    178.0   \n",
-       "3  Sense and Sensibility   10.673167   1995-12-13  135000000.0    136.0   \n",
-       "4             Four Rooms    9.026586   1995-12-09    4300000.0     98.0   \n",
+       "   original_title  popularity release_date      revenue  runtime  \\\n",
+       "0   Love Actually   10.586815   2003-09-07  244931766.0    135.0   \n",
+       "1    Notting Hill    9.874043   1999-05-13  363889678.0    124.0   \n",
+       "2             300   18.108408   2006-12-09  422610419.0    117.0   \n",
+       "3     Point Break   11.453093   1991-07-12   83531958.0    120.0   \n",
+       "4  American Pie 2   10.251030   2001-08-10  287553595.0    108.0   \n",
        "\n",
-       "                   title  vote_average  vote_count  month  holiday  \\\n",
-       "0              GoldenEye           6.6      1194.0     11        0   \n",
-       "1       Cutthroat Island           5.7       137.0     12        1   \n",
-       "2                 Casino           7.8      1343.0     11        0   \n",
-       "3  Sense and Sensibility           7.2       364.0     12        1   \n",
-       "4             Four Rooms           6.5       539.0     12        1   \n",
+       "            title  vote_average  vote_count  month  holiday  rating_average  \\\n",
+       "0   Love Actually           7.0      1917.0      9        0        3.668605   \n",
+       "1    Notting Hill           7.0      1309.0      5        0        3.750000   \n",
+       "2             300           7.0      5092.0     12        1        3.700000   \n",
+       "3     Point Break           6.9       861.0      7        1        4.162879   \n",
+       "4  American Pie 2           6.0      1375.0      8        1        3.068627   \n",
        "\n",
-       "   rating_average  rating_count  \n",
-       "0        1.500000             2  \n",
-       "1        3.616279            43  \n",
-       "2        3.555556            36  \n",
-       "3        5.000000             1  \n",
-       "4        3.267857            56  "
+       "   rating_count  \n",
+       "0            86  \n",
+       "1            78  \n",
+       "2            40  \n",
+       "3           132  \n",
+       "4            51  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +929,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "info2950",
    "language": "python",
    "name": "python3"
   },
