--- a/Report.ipynb
+++ b/Report.ipynb
@@ -748,9 +748,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Both budget and runtime have a positive correlation with revenue.\n",
+    "\n",
     "The coefficient for the transformed budget is 1.16, meaning that for every 1% increase in the movie's budget, the revenue is expected to increase by 1.16%, all else equal.\n",
     "\n",
-    "As for the runtime, for every 1% increase in the movie's runtime, the revenue is expected to increase by 0.81%, all else equal. Both budget and runtime have a positive correlation with revenue."
+    "As for the runtime, for every 1% increase in the movie's runtime, the revenue is expected to increase by 0.81%, all else equal. Both budget and runtime have a positive correlation with revenue.\n",
+    "\n",
+    "In terms of oddities, if a movie had a budget of $0 and a runtime of 0 minutes, the revenue would be negative, which is not possible."
    ]
   },
   {
@@ -1140,6 +1144,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Holiday and average TMDB vote have a positive correlation with revenue, while average MovieLens rating has a negative correlation with revenue.\n",
+    "\n",
     "The coefficient for `holiday` is about 5.17, meaning that if a movie is released during a holiday season, the revenue is expected to increase by about 5.17% compared to movies released during non-holiday seasons, all else equal.\n",
     "\n",
     "For `rating_average`, for every 1% increase in the movie's average MovieLens rating, the revenue is expected to decrease by about 1.41%, all else equal.\n",
