--- a/Report.ipynb
+++ b/Report.ipynb
@@ -485,7 +485,13 @@
     "\n",
     "**Analysis:** Multiple Linear Regression\n",
     "\n",
-    "In general, a higher budget suggests that more resources and effort were put into the making of a movie. We believe this is an indicator of a higher quality movie, which would likely generate more revenue. Looking at the correlation above, revenue and budget have a strong positive correlation of 0.76. This means a greater budget is typically associated with higher revenue."
+    "In general, a higher budget suggests that more resources and effort were put into the making of a movie. Movies with larger budgets often have access to better resources, including higher production quality, well-known actors, and extensive marketing campaigns, all of which would likely generate more revenue. Looking at the correlation above, revenue and budget have a strong positive correlation of 0.76. This means a greater budget is typically associated with higher revenue.\n",
+    "\n",
+    "We chose to do a train-test split, as this allows us to first train a model on our data, then evaluate its accuracy through examining its predictions on new data. If we had trained and tested the model on the same data, the model might memorize the data instead of learning the general patterns, leading to overfitting. By keeping a portion of the data separate, we can evaluate the model's performance on new, unseen data, ensuring it generalizes beyond the training data. Metrics like Root Mean Squared Error (RMSE) and Mean Absolute Error (MAE) calculated on the test set give us an idea of the model's accuracy in a real-world setting. In our project, we split the data into training and test sets, using 80% for training and 20% for testing, which is a standard practice. This ratio provides enough data for training while preserving sufficient data for testing.\n",
+    "\n",
+    "For our model, we chose to use a multiple linear regression. This allowed us to analyze the influence of a specific variable, while including other variables as a control to compare with. Our objective was to predict revenue, which is continuous numerical outcome. Linear regression is well-suited for modeling relationships between continuous variables. Linear regression also provides interpretable coefficients, allowing us to understand the contribution of each independent variable (budget and runtime) to the dependent variable (revenue). This helped us evaluate the impact of each factor.\n",
+    "\n",
+    "Linear regression assumes a linear relationship between the independent variables and the dependent variable. Given the relatively linear relationship observed after data transformation, linear regression was an appropriate and straightforward choice."
    ]
   },
   {
@@ -788,7 +794,11 @@
     "\n",
     "**Analysis:** Multiple Linear Regression\n",
     "\n",
-    "Looking at our scatterplot of release date vs revenue from exploratory data analysis, there is no evident correlation between these variables. However, we believe that there may be an association between the season of release and revenue generated. During the summer and winter, people tend to have more free time, whether it is due to summer break or the winter holidays. We grouped these two seasons into a holiday variable, with fall and spring as non-holiday seasons. Due to the increase in free time during these seasons, we speculate that people are more inclined to watch movies that are released at this time. Thus, we believe that a release date in a holiday season (summer or winter) is correlated with a higher revenue."
+    "Looking at our scatterplot of release date vs revenue from exploratory data analysis, there is no evident correlation between these variables. However, we believe that there may be an association between the season of release and revenue generated. During the summer and winter, people tend to have more free time, whether it is due to summer break or the winter holidays. We grouped these two seasons into a holiday variable, with fall and spring as non-holiday seasons. Due to the increase in free time during these seasons, we speculate that people are more inclined to watch movies that are released at this time. Thus, we believe that a release date in a holiday season (summer or winter) is correlated with a higher revenue.\n",
+    "\n",
+    "Again, a train-test split allows us to evaluate the model's generalizeability. This gives us an idea of how the model would perform on other, new data.\n",
+    "\n",
+    "A multiple linear regression was again selected to analyze the impact of the season of release, with additional variables included as controls. We are again predicting revenue, a continuous numerical outcome. After some transformations, the data met the assumptions for linear regression, producing random and scattered residual plots."
    ]
   },
   {
@@ -1185,7 +1195,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on our analyses, we have determined that budget and season of release have the greatest influence on a movie’s box office success. A high budget used to produce the movie is a predictor of a higher revenue generated. As for the season, movies released in a holiday season, either winter (December-February) or summer (June-August), typically generate higher revenue. A movie’s runtime showed a positive but weaker relationship revenue, suggesting that longer movies might slightly outperform shorter ones in box office returns. A higher vote average on TMDB correlated positively but modestly with revenue. Higher rating averages from MovieLens were associated with a slight decrease in revenue, suggesting that critically acclaimed movies might not always align with popular appeal."
+    "Based on our analyses, we have determined that budget and season of release have the greatest influence on a movie’s box office success. A high budget used to produce the movie is a predictor of a higher revenue generated. As for the season, movies released in a holiday season, either winter (December-February) or summer (June-August), typically generate higher revenue. A movie’s runtime showed a positive but weaker relationship revenue, suggesting that longer movies might slightly outperform shorter ones in box office returns. A higher vote average on TMDB correlated positively but modestly with revenue. Higher rating averages from MovieLens were associated with a slight decrease in revenue, suggesting that critically acclaimed movies might not always align with popular appeal.\n",
+    "\n",
+    "Higher budgets positively impact revenue, validating the importance of investment in production and marketing. However, the diminishing returns suggest that excessively high budgets may not always translate into proportional gains. Studios should aim for optimal budget allocations to maximize profitability.\n",
+    "\n",
+    "Movies released during holiday seasons (summer and winter) tend to generate higher revenue, highlighting the importance of strategic release scheduling. By planning a release date during a holiday season, studios can capitalize on higher audience turnout."
    ]
   },
   {
@@ -1223,7 +1237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "info2950",
    "language": "python",
    "name": "python3"
   },
