--- a/Report.ipynb
+++ b/Report.ipynb
@@ -489,9 +489,7 @@
     "\n",
     "We chose to do a train-test split, as this allows us to first train a model on our data, then evaluate its accuracy through examining its predictions on new data. If we had trained and tested the model on the same data, the model might memorize the data instead of learning the general patterns, leading to overfitting. By keeping a portion of the data separate, we can evaluate the model's performance on new, unseen data, ensuring it generalizes beyond the training data. Metrics like Root Mean Squared Error (RMSE) and Mean Absolute Error (MAE) calculated on the test set give us an idea of the model's accuracy in a real-world setting. In our project, we split the data into training and test sets, using 80% for training and 20% for testing, which is a standard practice. This ratio provides enough data for training while preserving sufficient data for testing.\n",
     "\n",
-    "For our model, we chose to use a multiple linear regression. This allowed us to analyze the influence of a specific variable, while including other variables as a control to compare with. Our objective was to predict revenue, which is continuous numerical outcome. Linear regression is well-suited for modeling relationships between continuous variables. Linear regression also provides interpretable coefficients, allowing us to understand the contribution of each independent variable (budget and runtime) to the dependent variable (revenue). This helped us evaluate the impact of each factor.\n",
-    "\n",
-    "Linear regression assumes a linear relationship between the independent variables and the dependent variable. Given the relatively linear relationship observed after data transformation, linear regression was an appropriate and straightforward choice."
+    "For our model, we chose to use a multiple linear regression. This allowed us to analyze the influence of a specific variable, while including other variables as a control to compare with. Our objective was to predict revenue, which is continuous numerical outcome. Linear regression is well-suited for modeling relationships between continuous variables. Linear regression also provides interpretable coefficients, allowing us to understand the contribution of each independent variable (budget and runtime) to the dependent variable (revenue). This helped us evaluate the impact of each factor."
    ]
   },
   {
@@ -1237,7 +1235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
